Improve support for dynamic type
- Removed the height constraint in the textview
- Assign a font supporting dynamic type

--- a/WooCommerce/Classes/ViewRelated/ReusableViews/TableFooterView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/TableFooterView.xib
@@ -26,10 +26,7 @@
                 </imageView>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" text="textview" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rC7-Y4-ujS">
                     <rect key="frame" x="20" y="48" width="335" height="22"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="22" id="nwW-E2-abh"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
                 </textView>
